--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
 #ANDROID_APP_PATH=C:/Users/admin/Downloads/org.wordpress.android_v5.6-289_Android-4.1.apk
 #APP_PACKAGE=org.wordpress.android
 #APP_ACTIVITY=org.wordpress.android.ui.WPLaunchActivity
-RUNNER=distribute
+RUNNER=parallel
 APPIUM_JS_PATH=C:/appium_install/Appium/node_modules/appium/lib/server/main.js
 BROWSER_TYPE=chrome
-APP_TYPE=NA
+APP_TYPE=web
 FRAMEWORK=testng
 host = 127.0.0.1:4723
 baseUrl = https://m-qa.sephora.com
